@@ -468,6 +468,8 @@ code {
 
 <p><strong>tab.padding</strong> | <code>int, int : Left/right padding, Top padding</code> | The pixel padding around tabs. Controls how the left and right edges are drawn.</p>
 
+<p><strong>tab.text_padding</strong> | <code>int : Left/right padding</code> | The padding (in pixels) on the left and right sides of the tab's text label. In contrast to 'padding', this does not affect how the tab background is drawn.</p>
+
 <p><strong>slot.quantity_label</strong> | <code>label</code> | Setting for the slot quantity text.</p>
 
 <p><strong>slot.quantity_color</strong> | <code>color</code> | Text color for the slot quantity text.</p>
