@@ -24,6 +24,7 @@ Engine features:
 * Damage Types and Elements have been combined. engine/elements.txt is still supported, but new mods should use engine/damage_types.txt.
 * Powers that deal non-elemental damage will now apply additional elemental damage based on the damage stats for said elements.
 * Power 'trait_elemental' now works with all damage types (despite the name). Any additional damage bonuses for the specified damage type will apply on top of the converted damage.
+* Added 'tab.text_padding' to engine/widget_settings.txt config.
 * Android: Enabled use of external input devices (gamepads, keyboards, mice)
 
 Engine fixes:
